--- a/config.json
+++ b/config.json
@@ -1,29 +1,29 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
-"botName": "Hinata-Md",
-"packname": "Hinata-Md",
-"author": "© Riy04",
+"ownerNumber": ["6285856575305@s.whatsapp.net"],
+"ownerName": ["SubarGanzz"],
+"botName": "SubarBotz",
+"packname": "Subar-Md",
+"author": "© SubarGazz",
 "sessionName": "session",
-"pathimg": "./media/hinata.jpg",
+"pathimg": "./media/Siesta.jpg",
 
 "medsos": {
-"youtube": "https://youtube.com/c/Riy04",
-"instagram": "https://instagram.com/riychdwayne"
+"youtube": "https://youtube.com/channel/UC8G_J3AE6B40Ejtg_deYNcA",
+"instagram": "https://instagram.com/subargaming17"
 },
 
 "donasi": {
-"saweria": "https://saweria.co/Riy20",
-"dana": "081575886399",
-"AN_dana": "Riy 04",
-"gopay": "081575886399",
-"AN_gopay": "Riy 04"
+"trakteer": "https://trakteer.id/Subar%20Gaming17",
+"dana": "085856575305",
+"AN_dana": "Akbar",
+"gopay": "085856575305",
+"AN_gopay": "Akbar"
 },
 
 "gamewaktu": 90,
-"limitCount": 25,
+"limitCount": 20,
 "gcount": {
-"prem": 35,
-"user": 15
+"prem": 50,
+"user": 20
 }
 }
